syntax = "proto3";

package InfinityNetServer.BuildingBlocks.Application.Protos;

option csharp_namespace = "InfinityNetServer.BuildingBlocks.Application.Protos";

import "google/protobuf/timestamp.proto";

import "google/protobuf/empty.proto";

import "Protos/base.proto";

message ProfileIdWithName {

  string id = 1;

  string name = 2;

}

message ProfileRequest {

	string id = 1;

}

message ProfilesRequest {

	repeated string ids = 1;

}

message PreviewFriendsResponse {

	repeated UserProfileResponse friends = 1;

}

message ProfileResponse {

	string id = 1;

	string name = 5;

	string mobileNumber = 6;

	string accountId = 7;

	string avatarId = 8;

	string coverId = 9;

	ProfileType type = 10;

}

message UserProfileResponse {

	string id = 1;

	string username = 2;

	string firstName = 3;

	string middleName = 4;

	string lastName = 5;

	string name = 6;

	string mobileNumber = 7;

	google.protobuf.Timestamp birthdate = 8;

	Gender gender = 9;

	ProfileStatus status = 10;

	google.protobuf.Timestamp createdAt = 11;

	google.protobuf.Timestamp updatedAt = 12;

	google.protobuf.Timestamp deletedAt = 13;

	ProfileType type = 14;

	string accountId = 15;

	string avatarId = 16;

	string coverId = 17;

}

message ProfileIdsResponse {
  repeated string ids = 1;
}

message ProfileIdsWithNamesResponse {
  repeated ProfileIdWithName profileIdsWithNames = 1;
}

service ProfileService {

	rpc getProfile(ProfileRequest) returns (ProfileResponse) {}

	rpc getUserProfile(ProfileRequest) returns (UserProfileResponse) {}

	rpc getPreviewFriends(ProfilesRequest) returns (PreviewFriendsResponse) {}

	rpc getProfileIds(google.protobuf.Empty) returns (ProfileIdsResponse) {}

	rpc getUserProfileIds(google.protobuf.Empty) returns (ProfileIdsResponse) {}

	rpc getPageProfileIds(google.protobuf.Empty) returns (ProfileIdsResponse) {}

	rpc getProfileIdsWithNames(ProfilesRequest) returns (ProfileIdsWithNamesResponse) {}

}